--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -620,6 +620,13 @@ config PMIC8058_XOADC
 	  PMIC8058. Driver interface to program registers of the ADC over
 	  AMUX channels, devices on programmable MPP's and xotherm.
 
+config PM8941_FLASH
+	tristate "Flash support for PM8941"
+	depends on SPMI && OF_SPMI
+	help
+	  This option enables device driver support for the flash
+	  on PM8941.
+
 config QSEECOM
 	tristate "Qualcomm Secure Execution Communicator driver"
 	help
