--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -682,6 +682,13 @@ config TI_DRV2667
 	  To compile this driver as a module, choose M here: the
 	  module will be called ti_drv2667.
 
+config IR_REMOTE
+	bool "MAXQ614 IR Remote control"
+	default n
+	help
+	  This option enables device driver support for IR remote control
+	  device.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
