--- a/drivers/platform/msm/Makefile
+++ b/drivers/platform/msm/Makefile
@@ -17,3 +17,4 @@ obj-$(CONFIG_QPNP_COINCELL) += qpnp-coincell.o
 obj-$(CONFIG_MSM_AVTIMER) += avtimer.o
 obj-$(CONFIG_SSM) += ssm.o
 obj-$(CONFIG_QPNP_REVID) += qpnp-revid.o
+obj-$(CONFIG_MPMTIME) += mpmtime.o
