add shinano platform
Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -287,6 +287,7 @@ config ARCH_MSM8974
 	select ARCH_WANT_KMAP_ATOMIC_FLUSH
 	select KRAIT_REGULATOR
 	select ENABLE_VMALLOC_SAVINGS
+	select HAVE_NMI_WATCHDOG if MSM_WATCHDOG_V2
 
 config ARCH_APQ8084
 	bool "APQ8084"
@@ -1137,6 +1138,69 @@ config MACH_FSM9XXX_SURF
 	  Support for the Qualcomm FSM9xxx femtocell
 	  chipset based SURF evaluation board and
 	  FFA board.
+
+config MACH_SONY_SIRIUS
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Sirius"
+	help
+	  Support for the SONY Mobile Sirius device.
+	  It is based on QCOM MSM8974 AB chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
+
+config MACH_SONY_CASTOR
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Castor"
+	help
+	  Support for the SONY Mobile Castor device.
+	  It is based on QCOM MSM8974 AB chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
+
+config MACH_SONY_CASTOR_WINDY
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Castor Windy"
+	help
+	  Support for the SONY Mobile Castor Windy device.
+	  It is based on QCOM APQ8074 AB chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
+
+config MACH_SONY_LEO
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Leo"
+	help
+	  Support for the SONY Mobile Leo device.
+	  It is based on QCOM MSM8974 AC chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
+
+config MACH_SONY_ARIES
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Aries"
+	help
+	  Support for the SONY Mobile Aries device.
+	  It is based on QCOM MSM8974 AC chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
+
+config MACH_SONY_SCORPION
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Scorpion"
+	help
+	  Support for the SONY Mobile Scorpion device.
+	  It is based on QCOM MSM8974 AC chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
+
+config MACH_SONY_SCORPION_WINDY
+	depends on ARCH_MSM8974
+	bool "Sony Mobile Scorpion Windy"
+	help
+	  Support for the SONY Mobile Scorpion Windy device.
+	  It is based on QCOM APQ8074 AC chipset.
+	  If you enable this config,
+	  Please use SONY Mobile source tree.
 
 endmenu
 
