--- a/arch/arm/configs/shinano_scorpion_windy_defconfig
+++ b/arch/arm/configs/shinano_scorpion_windy_defconfig
@@ -265,6 +265,7 @@ CONFIG_QPNP_VIBRATOR=y
 CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_NFC_PN547=y
+CONFIG_NFC_PN547_PMC8974_CLK_REQ=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
