--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -704,6 +704,16 @@ config NFC_PN544
 	help
 	  This option enables support for PN544.
 
+config CRASH_LAST_LOGS
+        bool "export kernel and amss logs in proc"
+        default n
+        depends on ARCH_MSM && MSM_SMD
+        help
+          This driver will export kernel and amss log in proc fs.
+          they can be found in files /proc/last_kmsg
+          and /proc/last_amsslog.This driver is mainly used in
+          Ramdump kernel.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
