add missing camera sensor configs
Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>

--- a/arch/arm/boot/dts/msm8974-rhine_amami_row.dtsi
+++ b/arch/arm/boot/dts/msm8974-rhine_amami_row.dtsi
@@ -261,6 +261,13 @@
 					mount_angle = <270>;
 					sensor_rotation = <180>;
 					sensor_facing = <0>;
+					pixel_number_w = <5248>;
+					pixel_number_h = <3936>;
+					diagonal_len = "7.87";
+					unit_cell_size = "1.20";
+					min_f_number = "2.00";
+					max_f_number = "2.00";
+					has_focus_actuator = <1>;
 					has_3a = <0>;
 					pll_num = <18>;
 					pll = <600 318 386 684 318 578 293 600 597 599 318 596 599 474 599 825 578 578>;
@@ -307,6 +314,13 @@
 					mount_angle = <90>;
 					sensor_rotation = <0>;
 					sensor_facing = <0>;
+					pixel_number_w = <5248>;
+					pixel_number_h = <3936>;
+					diagonal_len = "7.87";
+					unit_cell_size = "1.20";
+					min_f_number = "2.00";
+					max_f_number = "2.00";
+					has_focus_actuator = <1>;
 					has_3a = <0>;
 					pll_num = <18>;
 					pll = <600 318 386 684 318 578 293 600 597 599 318 596 599 474 599 825 578 578>;
@@ -353,6 +367,13 @@
 					mount_angle = <270>;
 					sensor_rotation = <180>;
 					sensor_facing = <0>;
+					pixel_number_w = <3280>;
+					pixel_number_h = <2464>;
+					diagonal_len = "4.595";
+					unit_cell_size = "1.12";
+					min_f_number = "2.40";
+					max_f_number = "2.40";
+					has_focus_actuator = <1>;
 					has_3a = <0>;
 					pll_num = <18>;
 					pll = <674 674 674 674 674 674 674 674 674 674 674 674 674 674 674 674 674 674>;
@@ -447,6 +468,13 @@
 					mount_angle = <270>;
 					sensor_rotation = <180>;
 					sensor_facing = <1>;
+					pixel_number_w = <1976>;
+					pixel_number_h = <1200>;
+					diagonal_len = "2.59";
+					unit_cell_size = "1.12";
+					min_f_number = "2.80";
+					max_f_number = "2.80";
+					has_focus_actuator = <0>;
 					has_3a = <0>;
 					pll_num = <18>;
 					pll = <104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104>;
@@ -489,6 +517,13 @@
 					mount_angle = <270>;
 					sensor_rotation = <180>;
 					sensor_facing = <1>;
+					pixel_number_w = <1976>;
+					pixel_number_h = <1200>;
+					diagonal_len = "2.59";
+					unit_cell_size = "1.12";
+					min_f_number = "2.80";
+					max_f_number = "2.80";
+					has_focus_actuator = <0>;
 					has_3a = <0>;
 					pll_num = <18>;
 					pll = <104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104>;
@@ -531,6 +566,13 @@
 					mount_angle = <270>;
 					sensor_rotation = <180>;
 					sensor_facing = <1>;
+					pixel_number_w = <1976>;
+					pixel_number_h = <1200>;
+					diagonal_len = "2.59";
+					unit_cell_size = "1.12";
+					min_f_number = "2.80";
+					max_f_number = "2.80";
+					has_focus_actuator = <0>;
 					has_3a = <0>;
 					pll_num = <18>;
 					pll = <104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104 104>;
