shinano: enable bcm wifi

--- a/arch/arm/configs/aosp_shinano_castor_defconfig
+++ b/arch/arm/configs/aosp_shinano_castor_defconfig
@@ -306,6 +306,8 @@ CONFIG_USB_NET_CX82310_ETH=y
 CONFIG_USB_NET_KALMIA=y
 CONFIG_USB_NET_INT51X1=y
 CONFIG_USB_SIERRA_NET=y
+CONFIG_BCMDHD=m
+CONFIG_BCM4339=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
