--- a/arch/arm/boot/dts/qcom/msm8956-loire-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-loire-common.dtsi
@@ -1176,6 +1176,20 @@
 	status = "disabled";
 };
 
+&mdss_dsi0_pll {
+	qcom,dsi-pll-ssc-en;
+	qcom,ssc-frequency-hz = <30000>;
+	qcom,ssc-ppm = <5000>;
+	qcom,dsi-pll-ssc-mode = "down-spread";
+};
+
+&mdss_dsi1_pll {
+	qcom,ssc-enable;
+	qcom,ssc-frequency-hz = <30000>;
+	qcom,ssc-ppm = <5000>;
+	qcom,ssc-spread-mode = "down-spread";
+};
+
 &labibb {
 	qcom,qpnp-labibb-mode = "lcd";
 
