--- a/arch/arm/boot/dts/qcom/sdm630-nile-common.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630-nile-common.dtsi
@@ -371,17 +371,24 @@
 		"ADC3_IN", "ADC3_OUT";
 };
 
+
 &rpm_bus {
 	rpm-regulator-ldoa18 {
+		compatible = "qcom,rpm-smd-regulator-resource";
+		qcom,resource-name = "ldoa";
+		qcom,resource-id = <18>;
+		qcom,regulator-type = <0>;
 		status = "okay";
 		pm660_l18: regulator-l18 {
+			compatible = "qcom,rpm-smd-regulator";
+			regulator-name = "pm660_l18";
+			qcom,set = <3>;
 			regulator-min-microvolt = <1800000>;
 			regulator-max-microvolt = <1800000>;
 			status = "okay";
 		};
 	};
 };
-
 &pm660l_l6 {
 	qcom,regulator-type = <0>;  /* LDO */
 	qcom,init-enable = <0>;
