clk: qcom: Introduce the RCGwR Clock Ramp Controller driver
This commit introduces the RCGwR Clock Ramp Controller driver,
responsible for doing the initial setup of the CPU RCGs by
programming sequences specified in device-tree.
The only known SoC using this driver is MSM8976/8956.

Signed-off-by: Angelo G. Del Regno <kholk11@gmail.com>

--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -200,6 +200,12 @@ config QCOM_HFPLL
 	  Say Y if you want to support CPU frequency scaling on devices
 	  such as MSM8974, APQ8084, etc.
 
+config RCGWR_CLOCKS
+	bool "RCGwR Clock Controller"
+	depends on COMMON_CLK_QCOM
+	help
+	  Support for the RCGwR Clock Controller.
+
 config KPSS_XCC
 	tristate "KPSS Clock Controller"
 	depends on COMMON_CLK_QCOM
