clk: qcom: Introduce the MSM8976 CPU/L2 Clock Controller driver
This commit adds full support for the CPU (APCS) Clusters and L2
(CCI) Clock Controllers found on the MSM8976/8956 SoC.

This driver is also responsible of driving the DVFS relative to
its managed PLLs and clocks and it is compatible with SPM.

Signed-off-by: Angelo G. Del Regno <kholk11@gmail.com>

--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -246,6 +246,13 @@ config CLOCK_CPU_OSM
 	 existence of multiple OSM domains.
 	 Say Y if you want to support osm clocks.
 
+config CLOCK_CPU_8976
+	bool "MSM8976 CPU Clock Controller"
+	depends on COMMON_CLK_QCOM
+	select RCGWR_CLOCKS
+	help
+	  Support for the MSM8976 CPU clock controller.
+
 config CLOCK_QPNP_DIV
 	tristate "QPNP PMIC clkdiv driver"
 	depends on COMMON_CLK_QCOM && SPMI
