--- a/arch/arm/boot/dts/qcom/msm8956-loire-kugo_camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-loire-kugo_camera.dtsi
@@ -75,8 +75,8 @@
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
 		status = "ok";
-		clocks = <&clock_gcc clk_mclk0_clk_src>,
-			 <&clock_gcc clk_gcc_camss_mclk0_clk>;
+		clocks = <&clock_gcc MCLK0_CLK_SRC>,
+			 <&clock_gcc GCC_CAMSS_MCLK0_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
@@ -108,8 +108,8 @@
 		qcom,sensor-mode = <1>;
 		qcom,cci-master = <1>;
 		status = "ok";
-		clocks = <&clock_gcc clk_mclk2_clk_src>,
-			 <&clock_gcc clk_gcc_camss_mclk2_clk>;
+		clocks = <&clock_gcc MCLK2_CLK_SRC>,
+			 <&clock_gcc GCC_CAMSS_MCLK2_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
