--- a/arch/arm64/configs/aosp_loire_suzu_defconfig
+++ b/arch/arm64/configs/aosp_loire_suzu_defconfig
@@ -563,7 +563,12 @@ CONFIG_IPA=y
 CONFIG_RMNET_IPA=y
 CONFIG_SSM=y
 CONFIG_USB_BAM=y
-CONFIG_MSM_MDSS_PLL=y
+# CONFIG_COMMON_CLK_XGENE is not set
+CONFIG_QCOM_CLK_SMD_RPM=y
+CONFIG_MSM_GCC_8976=y
+CONFIG_QCOM_HFPLL=y
+CONFIG_CLOCK_CPU_8976=y
+CONFIG_QCOM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_TIMER_LEAP=y
 CONFIG_ARM_SMMU=y
