--- a/arch/arm/boot/dts/qcom/msm8998-yoshino-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998-yoshino-common.dtsi
@@ -48,7 +48,7 @@
 					dev = "/dev/block/platform/soc/1da4000.ufshc/by-name/vendor";
 					type = "ext4";
 					mnt_flags = "ro,barrier=1";
-					fsmgr_flags = "wait";
+					fsmgr_flags = "wait,verify";
 					status = "ok";
 				};
 				odm {
@@ -63,7 +63,7 @@
 					compatible = "android,system";
 					dev = "/dev/block/platform/soc/1da4000.ufshc/by-name/system";
 					type = "ext4";
-					mnt_flags = "ro,barrier=1";
+					mnt_flags = "ro,barrier=1,verify";
 					fsmgr_flags = "wait";
 					status = "ok";
 				};
