--- a/arch/arm64/configs/aosp_nile_pioneer_defconfig
+++ b/arch/arm64/configs/aosp_nile_pioneer_defconfig
@@ -458,6 +458,8 @@ CONFIG_FB_MSM_MDSS_DP_PANEL=y
 CONFIG_FB_MSM_MDSS_SPECIFIC_PANEL=y
 CONFIG_SOUND=y
 CONFIG_SND=y
+# CONFIG_SND_PCI is not set
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_USB_AUDIO_QMI=y
 CONFIG_SND_SOC=y
