--- a/arch/arm64/configs/aosp_yoshino_lilac_defconfig
+++ b/arch/arm64/configs/aosp_yoshino_lilac_defconfig
@@ -34,6 +34,7 @@ CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_PARTITION_ADVANCED=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_MSM8998=y
 CONFIG_ARCH_SONY_YOSHINO=y
