--- a/arch/arm64/configs/aosp_yoshino_poplar_dsds_defconfig
+++ b/arch/arm64/configs/aosp_yoshino_poplar_dsds_defconfig
@@ -607,6 +607,7 @@ CONFIG_EXT4_ENCRYPTION=y
 CONFIG_EXT4_FS_ENCRYPTION=y
 CONFIG_EXT4_FS_ICE_ENCRYPTION=y
 CONFIG_QUOTA=y
+CONFIG_QUOTA_NETLINK_INTERFACE=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
 CONFIG_QFMT_V2=y
 CONFIG_FUSE_FS=y
