--- a/arch/arm64/configs/aosp_yoshino_maple_defconfig
+++ b/arch/arm64/configs/aosp_yoshino_maple_defconfig
@@ -636,6 +636,7 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_FTRACE is not set
 CONFIG_STRICT_DEVMEM=y
 CONFIG_PFK=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_SELINUX=y
