--- a/arch/arm64/configs/aosp_loire_suzu_defconfig
+++ b/arch/arm64/configs/aosp_loire_suzu_defconfig
@@ -683,6 +683,7 @@ CONFIG_PANIC_TIMEOUT=5
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
+# CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_FTRACE is not set
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_STRICT_DEVMEM=y
