--- a/arch/arm64/configs/aosp_tone_dora_defconfig
+++ b/arch/arm64/configs/aosp_tone_dora_defconfig
@@ -338,6 +338,7 @@ CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_AX88179_178A is not set
+# CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_BELKIN is not set
 # CONFIG_USB_NET_ZAURUS is not set
 CONFIG_WIFI_CONTROL_FUNC=y
