defconfig: nile: disable CONFIG_USB_NET_*
Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/configs/aosp_nile_discovery_defconfig
+++ b/arch/arm64/configs/aosp_nile_discovery_defconfig
@@ -337,6 +337,11 @@ CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_USBNET=y
+# CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_AX88179_178A is not set
+# CONFIG_USB_NET_NET1080 is not set
+# CONFIG_USB_BELKIN is not set
+# CONFIG_USB_NET_ZAURUS is not set
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_ATH_CARDS=y
 CONFIG_CLD_LL_CORE=y
