--- a/arch/arm64/configs/aosp_yoshino_lilac_defconfig
+++ b/arch/arm64/configs/aosp_yoshino_lilac_defconfig
@@ -330,6 +330,7 @@ CONFIG_PPPOPNS=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
