--- a/arch/arm64/configs/aosp_nile_discovery_defconfig
+++ b/arch/arm64/configs/aosp_nile_discovery_defconfig
@@ -348,6 +348,7 @@ CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS_GENL=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
