--- a/arch/arm64/configs/aosp_loire_suzu_defconfig
+++ b/arch/arm64/configs/aosp_loire_suzu_defconfig
@@ -520,6 +520,7 @@ CONFIG_MMC_SD_DEFERRED_RESUME=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_MMC_SDHCI_MSM_ICE=y
 CONFIG_MMC_CQ_HCI=y
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
