--- a/arch/arm/boot/dts/qcom/msm8956-loire-blanc-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-loire-blanc-common.dtsi
@@ -45,8 +45,8 @@
 		qcom,ext-reset-gpio = <&msm_gpio 66 0>;
 		qcom,master-id = <86>;
 		clock-names = "core_clk", "iface_clk";
-		clocks = <&clock_gcc clk_gcc_blsp1_uart1_apps_clk>,
-				<&clock_gcc clk_gcc_blsp1_ahb_clk>;
+		clocks = <&clock_gcc GCC_BLSP1_UART1_APPS_CLK>,
+				<&clock_gcc GCC_BLSP1_AHB_CLK>;
 		pinctrl-names = "default", "sleep";
 		pinctrl-0 = <&msm_gpio_0_act &msm_gpio_1_def>;
 		pinctrl-1 = <&msm_gpio_0_sus &msm_gpio_1_def>;
