arm64: DT: Tone-SDE: Fix display properties
The qcom,dsi-panel and somc,dsi-panel-list has to be added to
the sde_dsi_tone_panels phandle (display), not to the DSI one.

--- a/arch/arm64/boot/dts/qcom/msm8996-v3-pmi8996-tone-kagura-sde_generic.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-v3-pmi8996-tone-kagura-sde_generic.dts
@@ -38,7 +38,7 @@
 	qcom,board-id = <8 0>;
 };
 
-&dsi_panel_cmd_display {
+&sde_dsi_tone_panels {
 	qcom,dsi-panel = <&dsi_jdi_synaptics_cmd_6>;
 
 	somc,dsi-panel-list =  <&dsi_jdi_synaptics_cmd_6
