--- a/arch/arm64/boot/dts/qcom/msm8996-v3-pmi8996-tone-dora-sde_generic.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-v3-pmi8996-tone-dora-sde_generic.dts
@@ -38,7 +38,7 @@
 	qcom,board-id = <8 0>;
 };
 
-&dsi_panel_cmd_display {
+&sde_dsi_tone_panels {
 	qcom,dsi-panel = <&dsi_lgd_synaptics_cmd_8>;
 
 	somc,dsi-panel-list = <&dsi_auo_synaptics_cmd_4
