--- a/arch/arm64/boot/dts/qcom/msm8996-v3-pmi8996-tone-keyaki-sde_generic.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-v3-pmi8996-tone-keyaki-sde_generic.dts
@@ -38,7 +38,7 @@
 	qcom,board-id = <8 0>;
 };
 
-&dsi_panel_cmd_display {
+&sde_dsi_tone_panels {
 	qcom,dsi-panel = <&dsi_jdi_synaptics_cmd_6>;
 
 	somc,dsi-panel-list =  <&dsi_jdi_synaptics_cmd_6
