--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -388,7 +388,7 @@
 			     &pm8994_gpio_1 &pm8994_gpio_2 &pm8994_gpio_3
 			     &pm8994_gpio_4 &pm8994_gpio_5 &pm8994_gpio_6
 			     &pm8994_gpio_7 &pm8994_gpio_8 &pm8994_gpio_9
-			     &pm8994_gpio_10 &pm8994_gpio_11 &pm8994_gpio_11
+			     &pm8994_gpio_10 &pm8994_gpio_11 &pm8994_gpio_12
 			     &pm8994_gpio_13 &pm8994_gpio_14 &pm8994_gpio_15
 			     &pm8994_gpio_16 &pm8994_gpio_17 &pm8994_gpio_18
 			     &pm8994_gpio_19
@@ -3008,7 +3008,7 @@
 	mdss_touch_active: mdss_touch_active {
 		mux {
 			pins = "gpio125";
-			function = "touch_int_n";
+			function = "gpio";
 		};
 		config {
 			pins = "gpio125";
@@ -3021,7 +3021,7 @@
 	mdss_touch_suspend: mdss_touch_suspend {
 		mux {
 			pins = "gpio125";
-			function = "touch_int_n";
+			function = "gpio";
 		};
 		config {
 			pins = "gpio125";
