arm64: configs: somc: update auto-generated defconfig for all platforms
This update is generated automatically by using the script update_defconfig.sh which is maintained at this linked project below:
https://github.com/sonyxperiadev/kernel-defconfig/tree/aosp/LA.UM.7.1.r1
HEAD of the project used to prepare this commit:
https://github.com/sonyxperiadev/kernel-defconfig/tree/7bd1bab7d5254876a911e4f4cc57e8523b268eda

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/configs/aosp_loire_suzu_defconfig
+++ b/arch/arm64/configs/aosp_loire_suzu_defconfig
@@ -346,6 +346,8 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -365,6 +367,7 @@ CONFIG_PON_SOMC_ORG=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_FPC1145_PLATFORM=y
+CONFIG_SERIO_LIBPS2=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -502,6 +505,8 @@ CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_PCA9956B=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_DMADEVICES=y
