--- a/arch/arm64/configs/aosp_tama_apollo_defconfig
+++ b/arch/arm64/configs/aosp_tama_apollo_defconfig
@@ -385,6 +385,8 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -409,6 +411,7 @@ CONFIG_PON_SOMC_ORG=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_FPC1145_PLATFORM=y
+CONFIG_SERIO_LIBPS2=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -442,6 +445,7 @@ CONFIG_POWER_RESET_SYSCON=y
 CONFIG_QPNP_FG_GEN3=y
 CONFIG_QPNP_SMB2=y
 CONFIG_QPNP_SMBFG_NEWGEN_EXTENSION=y
+CONFIG_IDTP9221=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -578,6 +582,8 @@ CONFIG_LEDS_PCA9956B=y
 CONFIG_LEDS_QPNP_FLASH_V2=y
 CONFIG_LEDS_QPNP_HAPTICS=y
 CONFIG_LEDS_QTI_TRI_LED=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_EDAC=y
 CONFIG_EDAC_KRYO_ARM64=y
 CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
@@ -857,5 +863,6 @@ CONFIG_SND_SOC_SDM660_CDC=y
 CONFIG_SND_SOC_ANALOG_CDC=y
 CONFIG_SND_SOC_DIGITAL_CDC=y
 CONFIG_SND_SOC_MSM_SDW=y
+CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_SDM845=y
 CONFIG_SND_SOC_WCD_CPE_SOMC_EXT=y
