--- a/arch/arm64/configs/aosp_loire_blanc_defconfig
+++ b/arch/arm64/configs/aosp_loire_blanc_defconfig
@@ -346,6 +346,8 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -368,6 +370,7 @@ CONFIG_INPUT_ADUX1050=y
 CONFIG_ADUX1050_POLL=y
 CONFIG_INPUT_S210ST0X=y
 CONFIG_FPC1145_PLATFORM=y
+CONFIG_SERIO_LIBPS2=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -509,6 +512,8 @@ CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_PCA9956B=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_DMADEVICES=y
