--- a/arch/arm64/configs/aosp_tama_akatsuki_defconfig
+++ b/arch/arm64/configs/aosp_tama_akatsuki_defconfig
@@ -384,6 +384,8 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -409,6 +411,7 @@ CONFIG_PON_SOMC_ORG=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_FPC1145_PLATFORM=y
+CONFIG_SERIO_LIBPS2=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -858,5 +861,6 @@ CONFIG_SND_SOC_SDM660_CDC=y
 CONFIG_SND_SOC_ANALOG_CDC=y
 CONFIG_SND_SOC_DIGITAL_CDC=y
 CONFIG_SND_SOC_MSM_SDW=y
+CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_SDM845=y
 CONFIG_SND_SOC_WCD_CPE_SOMC_EXT=y
