--- a/arch/arm64/configs/aosp_tone_dora_defconfig
+++ b/arch/arm64/configs/aosp_tone_dora_defconfig
@@ -94,7 +94,14 @@ CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -380,6 +387,8 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_KEYBOARD_ATKBD is not set
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -399,6 +408,7 @@ CONFIG_PON_SOMC_ORG=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_FPC1145_PLATFORM=y
+CONFIG_SERIO_LIBPS2=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -464,6 +474,8 @@ CONFIG_REGULATOR_CPR3_MMSS=y
 CONFIG_REGULATOR_KRYO=y
 CONFIG_REGULATOR_MEM_ACC=y
 CONFIG_REGULATOR_RPM_SMD=y
+CONFIG_REGULATOR_QPNP_LABIBB_SOMC=y
+CONFIG_SOMC_LCD_OCP_ENABLED=y
 CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_STUB=y
 # CONFIG_RC_CORE is not set
@@ -549,12 +561,15 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_SOMC_LOW_VOLTAGE=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
-CONFIG_MMC_SDHCI_MSM_LEGACY=y
+CONFIG_MMC_SDHCI_MSM=y
+CONFIG_MMC_SDHCI_MSM_ICE=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_PCA9956B=y
 CONFIG_LEDS_QPNP_FLASH=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_EDAC=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
@@ -580,10 +595,7 @@ CONFIG_RNDIS_IPA=y
 # CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_QCOM_MDSS_PLL=y
 CONFIG_QCOM_CLK_SMD_RPM=y
-CONFIG_MSM_GCC_8976=y
 CONFIG_MSM_MMCC_8996=y
-CONFIG_QCOM_HFPLL=y
-CONFIG_CLOCK_CPU_8976=y
 CONFIG_MSM_APCC_8996=y
 CONFIG_SPMI_PMIC_CLKDIV=y
 CONFIG_HWSPINLOCK=y
@@ -622,6 +634,7 @@ CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_SYSMON_QMI_COMM=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
+CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
@@ -716,7 +729,6 @@ CONFIG_SCHEDSTATS=y
 CONFIG_IPC_LOGGING=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
-CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_CORESIGHT=y
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_PFK=y
