drivers: soc: Add support for SM6150 llcc driver
Add support for sm6150-llcc driver. The driver is
written by taking reference from sm6150-llcc driver
in msm-4.14 kernel at commit id "5d390f121ba7".

Change-Id: I53f200460e3b18dfe3453923745104f8e804b9c5
Signed-off-by: Saurabh Ambulkar <sambulka@codeaurora.org>

--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -48,6 +48,7 @@ obj-$(CONFIG_QCOM_SDXLEMUR_LLCC) += llcc-sdxlemur.o
 obj-$(CONFIG_QCOM_SHIMA_LLCC) += llcc-shima.o
 obj-$(CONFIG_QCOM_YUPIK_LLCC) += llcc-yupik.o
 obj-$(CONFIG_QCOM_SM8150_LLCC) += llcc-sm8150.o
+obj-$(CONFIG_QCOM_SM6150_LLCC) += llcc-sm6150.o
 obj-$(CONFIG_QCOM_KONA_LLCC) += llcc-kona.o
 obj-$(CONFIG_QCOM_LAGOON_LLCC) += llcc-lagoon.o
 obj-$(CONFIG_QCOM_MINIDUMP) += msm_minidump.o minidump_log.o
