Revert "arm64: dts: qcom/disp/nagara: Use generic display compatible"
This reverts commit ff78ad48d2c9ec6b300688a65ba8add9b9229065.

--- a/arch/arm64/boot/dts/qcom/somc-nagara-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/somc-nagara-display.dtsi
@@ -147,7 +147,7 @@
 };
 
 &sde_dsi {
-	compatible = "qcom,dsi-display";
+	compatible = "somc,dsi-display";
 	label = "primary";
 
 	qcom,dsi-ctrl = <&mdss_dsi0 &mdss_dsi1>;
