pdx224: update defconfig
The defcondig is updated with device model

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/configs/aosp_nagara_pdx224_defconfig
+++ b/arch/arm64/configs/aosp_nagara_pdx224_defconfig
@@ -51,6 +51,7 @@ CONFIG_PROFILING=y
 # CONFIG_ZONE_DMA is not set
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_SONY_NAGARA=y
+CONFIG_MACH_SONY_PDX224=y
 CONFIG_ARCH_WAIPIO=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=32
