HACK: disable STACKPROTECTOR
our clang can not use STACKPROTECTOR and will generate the error
ld.lld: error: undefined symbol: __stack_chk_guard

this patch should be reverted when new clang is used

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -479,7 +479,7 @@ config STACKPROTECTOR
 	bool "Stack Protector buffer overflow detection"
 	depends on HAVE_STACKPROTECTOR
 	depends on $(cc-option,-fstack-protector)
-	default y
+	default n
 	help
 	  This option turns on the "stack-protector" GCC feature. This
 	  feature puts, at the beginning of functions, a canary value on
