dts: murray: remove unused dtb
our bootloader gets confused if unused configuration is available

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/boot/dts/somc/Makefile
+++ b/arch/arm64/boot/dts/somc/Makefile
@@ -7,9 +7,7 @@ ifeq ($(CONFIG_MACH_SONY_PDX215),y)
 dtbo-$(CONFIG_ARCH_SONY_SAGAMI) += lahaina-sagami-pdx215_generic-overlay.dtbo
 endif
 ifeq ($(CONFIG_MACH_SONY_PDX225),y)
-dtbo-$(CONFIG_MACH_SONY_PDX225) += \
-	blair-murray-pdx225_generic-overlay.dtbo \
-	blair-murray-pdx225_sm5038_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_PDX225) += blair-murray-pdx225_sm5038_generic-overlay.dtbo
 endif
 
 ifeq ($(CONFIG_MACH_SONY_PDX214),y)
@@ -19,7 +17,6 @@ ifeq ($(CONFIG_MACH_SONY_PDX215),y)
 lahaina-sagami-pdx215_generic-overlay.dtbo-base := ../qcom/lahaina.dtb ../qcom/lahaina-v2.dtb ../qcom/lahaina-v2.1.dtb
 endif
 ifeq ($(CONFIG_MACH_SONY_PDX225),y)
-blair-murray-pdx225_generic-overlay.dtbo-base := ../qcom/blair.dtb
 blair-murray-pdx225_sm5038_generic-overlay.dtbo-base := ../qcom/blair.dtb
 endif
 
@@ -29,7 +26,6 @@ dtb-$(CONFIG_MACH_SONY_PDX214) += \
 dtb-$(CONFIG_MACH_SONY_PDX215) += \
 	lahaina-v2-sagami-pdx215_generic.dtb
 dtb-$(CONFIG_MACH_SONY_PDX225) += \
-	blair-murray-pdx225_generic.dtb \
 	blair-murray-pdx225_sm5038_generic.dtb
 endif
 
