arm64: configs: somc: update auto-generated defconfig for all platforms
This update is generated automatically by using the script update_defconfig.sh which is maintained at this linked project below:
https://github.com/sonyxperiadev/kernel-defconfig/tree/aosp/LA.UM.9.14.r1
HEAD of the project used to prepare this commit:
https://github.com/sonyxperiadev/kernel-defconfig/tree/b750173735de77d7949b1c87011a7330424d59eb

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/configs/aosp_murray_pdx225_defconfig
+++ b/arch/arm64/configs/aosp_murray_pdx225_defconfig
@@ -77,6 +77,7 @@ CONFIG_RANDOMIZE_BASE=y
 # CONFIG_DMI is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
+CONFIG_TLB_CONF_HANDLER=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_ENERGY_MODEL=y
@@ -261,8 +262,8 @@ CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_HCIBTSDIO=y
-CONFIG_MSM_BT_POWER=m
-CONFIG_BTFM_SLIM=m
+CONFIG_MSM_BT_POWER=y
+CONFIG_BTFM_SLIM=y
 CONFIG_CFG80211=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_MAC80211=y
@@ -301,7 +302,7 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_SONY_EXT_UIM_CTRL=y
 CONFIG_NFC_PN547=y
 CONFIG_NFC_PN553_DEVICES=y
-CONFIG_HAPTIC_NV=m
+CONFIG_HAPTIC_NV=y
 CONFIG_LEDS_HAPTICS=y
 CONFIG_LEDS_HAPTICS_DRV2624_RAM=y
 CONFIG_HQHARDWARE_INFO=y
@@ -398,7 +399,7 @@ CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_FTS_TRUSTED_TOUCH=y
 CONFIG_TOUCHSCREEN_NT36XXX=y
 CONFIG_NOVATEK_TRUSTED_TOUCH=y
-CONFIG_TOUCHSCREEN_SEC_TS_MURRAY=m
+CONFIG_TOUCHSCREEN_SEC_TS_MURRAY=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_QCOM_HV_HAPTICS=y
@@ -412,6 +413,7 @@ CONFIG_SERIAL_8250=y
 # CONFIG_SERIAL_8250_EXAR is not set
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_MSM_GENI=y
+CONFIG_SERIAL_MSM_GENI_CONSOLE=y
 CONFIG_SERIAL_MSM_GENI_HALF_SAMPLING=y
 CONFIG_HVC_HAVEN=y
 CONFIG_HW_RANDOM=y
@@ -420,7 +422,7 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
 CONFIG_MSM_ADSPRPC=y
 CONFIG_ADSPRPC_QGKI=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 # CONFIG_I2C_COMPAT is not set
 CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_HELPER_AUTO is not set
@@ -442,7 +444,7 @@ CONFIG_POWER_RESET_QCOM_DOWNLOAD_MODE=y
 CONFIG_POWER_RESET_QCOM_DOWNLOAD_MODE_DEFAULT=y
 CONFIG_POWER_RESET_QCOM_REBOOT_REASON=y
 CONFIG_QTI_BATTERY_CHARGER=y
-CONFIG_IFPM_SM5038=m
+CONFIG_IFPM_SM5038=y
 CONFIG_QCOM_POWER_SUPPLY=y
 CONFIG_SOMC_BATTERY_CHARGER=y
 CONFIG_SENSORS_QTI_AMOLED_ECM=y
@@ -485,6 +487,7 @@ CONFIG_REGULATOR_QPNP_AMOLED=y
 CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
+CONFIG_REGULATOR_RPM_SMD=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
@@ -500,7 +503,7 @@ CONFIG_VIDEO_MEM2MEM_DEINTERLACE=y
 CONFIG_CEC_PLATFORM_DRIVERS=y
 CONFIG_MSM_GLOBAL_SYNX=y
 CONFIG_MSM_CVP=y
-CONFIG_I2C_RTC6226_QCA=m
+CONFIG_I2C_RTC6226_QCA=y
 # CONFIG_VGA_ARB is not set
 CONFIG_DRM=y
 # CONFIG_DRM_FBDEV_EMULATION is not set
@@ -619,28 +622,11 @@ CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_MSM_HEAPS=y
 CONFIG_ION_POOL_AUTO_REFILL=y
-CONFIG_QCA_CLD_WLAN=y
-CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_WLAN_FEATURE_LPSS=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_QCACLD_FEATURE_NAN=y
-CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
-CONFIG_QCACLD_FEATURE_GREEN_AP=y
-CONFIG_HELIUMPLUS=y
-CONFIG_64BIT_PADDR=y
-CONFIG_QCOM_TDLS=y
-CONFIG_QCOM_LTE_COEX=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_FEATURE_TSO=y
-CONFIG_WLAN_FASTPATH=y
-CONFIG_WLAN_NAPI=y
-CONFIG_WLAN_SYNC_TSF=y
-CONFIG_LFR_SUBNET_DETECTION=y
-CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_MSM_EXT_DISPLAY=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
+CONFIG_IPA3=y
+CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_GENI_SE=y
 CONFIG_COMMON_CLK_QCOM_DEBUG=y
@@ -654,6 +640,7 @@ CONFIG_SM_DISPCC_HOLI=y
 CONFIG_SM_DEBUGCC_HOLI=y
 CONFIG_SM_GPUCC_BLAIR=y
 CONFIG_SM_DISPCC_BLAIR=y
+CONFIG_SM_DEBUGCC_BLAIR=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
 CONFIG_MAILBOX=y
@@ -670,6 +657,7 @@ CONFIG_QCOM_LAZY_MAPPING=y
 CONFIG_QCOM_IOMMU_TLBI_QUIRKS=y
 CONFIG_REMOTEPROC=y
 CONFIG_RPMSG_CHAR=y
+CONFIG_RPMSG_QCOM_GLINK_RPM=y
 CONFIG_RPMSG_QCOM_GLINK_SMEM=y
 CONFIG_RPMSG_QCOM_GLINK_SPSS=y
 CONFIG_MSM_RPM_SMD=y
@@ -683,7 +671,7 @@ CONFIG_QCOM_PROXY_OF_CONSUMER=y
 CONFIG_QCOM_IPCC=y
 CONFIG_QCOM_RIMPS=y
 CONFIG_QCOM_LLCC=y
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QPNP_PBS=y
 CONFIG_SETUP_SSR_NOTIF_TIMEOUTS=y
 CONFIG_SSR_SYSMON_NOTIF_TIMEOUT=20000
@@ -782,7 +770,6 @@ CONFIG_QCOM_QFPROM_SYSFS=y
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_STM_PROTO_BASIC=y
-CONFIG_SLIMBUS=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_INTERCONNECT_TEST=y
 CONFIG_INTERCONNECT_QCOM=y
