--- a/arch/arm64/configs/aosp_sagami_pdx214_defconfig
+++ b/arch/arm64/configs/aosp_sagami_pdx214_defconfig
@@ -361,12 +361,12 @@ CONFIG_USB_USBNET=y
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
-CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS2=y
 CONFIG_CNSS2_QMI=y
 CONFIG_CNSS_ASYNC=y
 CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_CNSS_QCA6490=y
+CONFIG_CNSS_UTILS=y
 CONFIG_CNSS_GENL=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_INPUT_EVDEV=y
@@ -624,6 +624,8 @@ CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_MSM_EXT_DISPLAY=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
+CONFIG_IPA3=y
+CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_GENI_SE=y
 CONFIG_COMMON_CLK_SCPI=y
@@ -720,8 +722,6 @@ CONFIG_QCOM_GUESTVM=y
 CONFIG_QCOM_HYP_CORE_CTL=y
 CONFIG_QTI_CRYPTO_COMMON=y
 CONFIG_QTI_HW_KEY_MANAGER=y
-CONFIG_ICNSS2=y
-CONFIG_ICNSS2_QMI=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_ARM_MEMLAT_MON=y
